# online-chat-app-oop-elsys

./: README.md  docker-compose.yml  pyproject.toml
client/html/: auth.html  index.html  rooms.html
client/static/css/: auth.css  style.css
client/static/js/: auth.js  auth_guard.js  index.js  rooms.js
data/data/system/IndexInfo-9f5c6374d48532299a0a5094af9ad1e3/: nb-5-big-CompressionInfo.db  nb-5-big-Data.db  nb-5-big-Digest.crc32  nb-5-big-Filter.db  nb-5-big-Index.db  nb-5-big-Statistics.db  nb-5-big-Summary.db  nb-6-big-Data.db  nb-6-big-Digest.crc32  nb-6-big-Statistics.db
data/data/system/compaction_history-b4dbb7b4dc493fb5b3bfce6e434832ca/: nb-13-big-CompressionInfo.db  nb-13-big-Data.db  nb-13-big-Filter.db  nb-13-big-Index.db  nb-13-big-Statistics.db  nb-13-big-Summary.db
data/data/system/local-7ad54392bcdd35a684174e047860b377/: nb-16-big-CompressionInfo.db  nb-16-big-Data.db  nb-16-big-Digest.crc32  nb-16-big-Statistics.db  nb-17-big-Data.db  nb-17-big-Digest.crc32  nb-17-big-Statistics.db  nb-18-big-Data.db  nb-18-big-Statistics.db
data/data/system/size_estimates-618f817b005f3678b8a453f3930b8e86/: nb-13-big-CompressionInfo.db  nb-13-big-Data.db  nb-13-big-Digest.crc32  nb-13-big-Index.db  nb-13-big-Statistics.db  nb-14-big-CompressionInfo.db  nb-14-big-Data.db  nb-14-big-Digest.crc32  nb-14-big-Index.db  (+1 more)
data/saved_caches/: KeyCache-f.crc  KeyCache-f.db
web_chat/: flask.py  main.py  sio.py
web_chat/server/: __init__.py  abstract.py  db.py  flask.py  sio.py
web_chat/server/models/: chat_model.py  message_model.py  modelProcessor.py  user_model.py
(+168 files in other folders)
